--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,10 @@ li {
     list-style-type: none;
 }
 
+body {
+    background-color: #019494;
+}
+
 /* Header + nav */
 
 header {
@@ -39,7 +43,7 @@ header {
 
 .nav-link {
     display: block;
-    padding: 2em 1.5em;
+    padding: 2.5em;
     text-decoration: none;
     color: white;
     font-size: 1.2em;
@@ -59,13 +63,14 @@ header {
 
 main {
     height: 70vh;
+    overflow: hidden;
+    background-color: #ffcb69;
 }
 
 .landing-element {
     width: 50%;
     height: 100%;
     float: left;
-    background-color: #ffcb69;
 }
 
 .landing-name {
@@ -77,6 +82,8 @@ main {
 
 .reservation {
     text-align: center;
+    height: 50%;
+    margin-top: 5vh;
 }
 
 .reservation-header {
@@ -84,17 +91,14 @@ main {
     vertical-align: middle;
 }
 
-.reservation-form {
-    height: 90%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+.reservation-input {
+    padding: 1em;
 }
 
 .reservation-submit {
     background-color: #019494;
     font-size: 1rem;
+    margin: 0.5em;
     padding: 0.5em;
     border: 1px solid #017070;
     border-radius: 5px;
@@ -120,10 +124,78 @@ main {
  /* Menu */
 
  .menu {
-     height: 100%;
-     background-color: #ffcb69;
-     text-align: center;
+     align-items: center;
+     justify-content: space-around;
+     height: 70%;
+     display: flex;
+     flex-direction: column;
  }
 
- .menu table {
+ .menu-table {
+     width: 20%;
+     height: 200px;
+     overflow: scroll;
+     border-collapse: collapse;
  }
+
+ .menu-item {
+     padding: 1em;
+     display: flex;
+     justify-content: space-between;
+     border-bottom: 1px dotted #019494;
+     transition: 0.2s ease;
+ }
+
+ .menu-item:hover {
+     background-color: #ffd17b;
+ }
+
+ /* About */
+ .about-page {
+    width: 50%;
+    text-align: center;
+    font-size: 1.5em;
+    margin: auto;
+ }
+
+ .about-element {
+     padding: 2em;
+ }
+
+ @media only screen and (max-width: 800px) {
+    header {
+        text-align: center;
+        flex-direction: column;
+        height: 12vh;
+    }
+
+    nav {
+        position: sticky;
+        top: 0;
+    }
+    
+    .nav-link {
+        padding: 0 1em;
+    }
+
+    .landing-element {
+        width: 100%;
+        height: auto;
+    }
+
+    .landing-name {
+        margin-top: 1vh;
+    }
+
+    .reservation {
+        margin: 8vh 0;
+    }
+
+    main {
+        height: auto;
+    }
+
+    .about-page {
+        width: 90%;
+    }
+}
