--- a/style/style.css
+++ b/style/style.css
@@ -162,7 +162,7 @@ main {
      padding: 2em;
  }
 
- @media only screen and (max-device-width: 800px) {
+ @media only screen and (max-width: 800px), only screen and (max-device-width: 800px) {
     header {
         text-align: center;
         flex-direction: column;
