--- a/style/style.css
+++ b/style/style.css
@@ -62,7 +62,7 @@ header {
 /* Main page */
 
 main {
-    height: 70vh;
+    min-height: 70vh;
     overflow: hidden;
     background-color: #ffcb69;
 }
@@ -74,6 +74,7 @@ main {
 }
 
 .landing-name {
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -83,7 +84,6 @@ main {
 .reservation {
     text-align: center;
     height: 50%;
-    margin-top: 5vh;
 }
 
 .reservation-header {
@@ -108,18 +108,32 @@ main {
 
 /* Footer */
  footer {
-     height: 20vh;
      background-color: #019494;
      color: white;
      font-size: 1.5em;
      text-align: center;
+     overflow: hidden;
  }
 
- footer p {
-     display: block;
-     position: relative;
-     top: 40%;
+ .contact-us {
+    min-height: 18vh;
+    padding: 1vh;
  }
+
+ .contact-header {
+     float: left;
+ }
+
+ .contact-type, .contact-info {
+     font-size: 0.8em;
+     float: left;
+     padding: 0.1em 0.5em;
+ }
+
+ .contact-info {
+     float: left;
+ }
+
 
  /* Menu */
 
@@ -168,7 +182,7 @@ main {
     header {
         text-align: center;
         flex-direction: column;
-        height: 30vh;
+        height: 150px;
         font-size: 1.8em;
     }
 
